update gitignore pbo

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,22 @@
 /steam_appid.txt
 /steamclient.dll
 /tier0_s.dll
+/@ViruZ/Addons/rds_a2port_cman.pbo
+/@ViruZ/Addons/viruz_build.pbo
+/@ViruZ/Addons/viruz_builds.pbo
+/@ViruZ/Addons/viruz_equip.pbo
+/@ViruZ/Addons/viruz_map_stratis_scenes.pbo
+/@ViruZ/Addons/viruz_mod.pbo
+/@ViruZ/Addons/viruz_sound.pbo
+/@ViruZ/Addons/viruz_weapons.pbo
+/@ViruZ/Addons/viruz_zombie.pbo
+/@ViruZ/Addons/anims.pbo
+/@ViruZ/Addons/anims_rtm.pbo
+/@ViruZ/Addons/babe_core.pbo
+/@ViruZ/Addons/babe_em.pbo
+/@ViruZ/Addons/dbo_old_bike.pbo
+/@ViruZ/Addons/fix_a3_weapons_mx.pbo
+/@ViruZ/Addons/functions_f_zed.pbo
+/@ViruZ/Addons/landrover.pbo
+/@ViruZ/Addons/outlw_magRepack.pbo
+/@ViruZ/Addons/rds_a2port_civ.pbo
