--- a/cfgviruz/HiveExt.ini
+++ b/cfgviruz/HiveExt.ini
@@ -12,12 +12,12 @@
 [Time]
 ;Possible values: Local, Custom, Static
 ;You cannot use Static on OFFICIAL Hive, it will just revert to Local
-;Type = Static
+Type = Static
 ;If using Custom type, offset from UTC in hours (can be negative as well)
 ;Offset = -8
 ;These 2 settings only apply if using Static type (Custom date/time on every server start)
 ;The value (0-24) to set the Hour to, if commented or empty then the hour won't be changed
-;Hour = 13
+Hour = 13
 ;The value (DD/MM/YYYY) to set the Date to, if commented or empty then the date won't be changed
 ;Date = 4.1.2013
 
