--- a/cfgviruz/config.cfg
+++ b/cfgviruz/config.cfg
@@ -1,6 +1,6 @@
 // Config file generated 17-Jun-16 12:52 PM with TADST.
 
-hostName = "ViruZMod - DEV";
+hostName = "VIRUZ MOD Undead Brasil #UBS |Dev Server|";
 password = "123";
 passwordAdmin = "27091995";
 serverCommandPassword = "27091995";
@@ -8,21 +8,22 @@ logFile = "logfile_console.log";
 
 motd[] = {
 };
-motdInterval = 3;
+motdInterval = 5;
 
 maxPlayers = 70;
 kickduplicate = 0;
 verifySignatures = 0;
 allowedFilePatching = 1;
-requiredSecureId = 0;
+requiredSecureId = 2;
 
 voteMissionPlayers = 3;
 voteThreshold = 0.33;
 
 disableVoN = 0;
 vonCodecQuality = 10;
-persistent = 0;
-timeStampFormat = "none";
+persistent = 1;
+timeStampFormat 					= "short";
+equalModRequired 					= 0;
 BattlEye = 1;
 
 doubleIdDetected = "";
@@ -37,8 +38,7 @@ class Missions
 {
 	class ViruZMod
 	{
-		template = "ViruZ.Altis";
-		difficulty = "regular";
+		template = "ViruZ.Chernarus";
 	};
 
 
