Configuração do mapa e da inicialização do servidor

--- a/cfgviruz/config.cfg
+++ b/cfgviruz/config.cfg
@@ -1,6 +1,6 @@
 // Config file generated 17-Jun-16 12:52 PM with TADST.
 
-hostName = "VIRUZ MOD Undead Brasil #UBS |Dev Server|";
+hostName = "Official ViruZ Mod #UBS |Open Beta|";
 password = "123";
 passwordAdmin = "27091995";
 serverCommandPassword = "27091995";
