--- a/cfgviruz/config.cfg
+++ b/cfgviruz/config.cfg
@@ -1,7 +1,7 @@
 // Config file generated 17-Jun-16 12:52 PM with TADST.
 
 hostName = "Official ViruZ Mod #UBS |Open Beta|";
-password = "123";
+password = "";
 passwordAdmin = "27091995";
 serverCommandPassword = "27091995";
 logFile = "logfile_console.log";
