Alguns Update que o Leo Fez

--- a/BEC/Config/Config.cfg
+++ b/BEC/Config/Config.cfg
@@ -61,7 +61,7 @@ AsciiNickOnly = False
 
 
 # Only allow english chars to be typed on the chat. Note, Warnings must be enabled. 0 or more.
-AsciiChatOnly = True
+AsciiChatOnly = False
 
 
 # If AsciiChatOnly is set True. you can define none english chars that will be accepted.
@@ -75,7 +75,7 @@ Warnings = 3
 
 
 # Kick players who has listed chars in their name when they connect
-DisallowPlayerNameChars	= []{}()0123456789
+#DisallowPlayerNameChars	= []{}()0123456789
 
 
 # Min length, kicks players who has to short name when they connect.
@@ -89,7 +89,7 @@ MaxPlayerNameLength	= 16
 # Set the name of your Arma3server.exe if it has been renamed from arma3server.exe to something else!
 # if the exe has its original name. comment it out.
 # DO NOT SET FULL PATH TO THE EXE FILE
-ServerExeName = NewArmaExeName.exe
+ServerExeName = viruzserver.exe
 
 
 # Set path to the file containing a list of bad words. Note, Warnings must be enabled. 0 or more.
@@ -157,14 +157,14 @@ Timeout = 30
 # Going passed the number will result in kick. -1 is disabled, 0 instant kick.
 # If the number is higher than 0 players will be sent warnings.
 
-Lobby = 30
-Global = 5
-Side = 7
-Group = 9
-Vehicle	= 11
-Command	= 13
-Commander = 15
-Direct = 17
+Lobby = -1
+Global = -1
+Side = -1
+Group = -1
+Vehicle	= -1
+Command	= -1
+Commander = -1
+Direct = -1
 
 
 #--------------------------------------------------------------------------------------------------------
