Fixed Vehicles Spawn Fixed AutoRestart

--- a/BEC/Config/Config.cfg
+++ b/BEC/Config/Config.cfg
@@ -89,7 +89,7 @@ MaxPlayerNameLength	= 16
 # Set the name of your Arma3server.exe if it has been renamed from arma3server.exe to something else!
 # if the exe has its original name. comment it out.
 # DO NOT SET FULL PATH TO THE EXE FILE
-ServerExeName = viruzserver.exe
+# ServerExeName = arma3server.exe
 
 
 # Set path to the file containing a list of bad words. Note, Warnings must be enabled. 0 or more.
@@ -109,7 +109,7 @@ NickFilterFile = BadNames.txt
 
 
 # Set the path to the Scheduler.xml file.
-#Scheduler = Scheduler.xml
+Scheduler = Scheduler.xml
 
 
 # Kick people who are idleing in the lobby, kick will happen after given time, Min time is 90 sec. use 0 to disable this function.
@@ -133,7 +133,7 @@ SlotLimitKickMsg = The Server has reached its player limit.
 
 
 # The amount of time Bec will wait for the server to start up.
-Timeout = 30
+Timeout = 0
 
 
 #--------------------------------------------------------------------------------------------------------
