OFFICAL SERVER NOW

--- a/ViruZ/HiveExt.ini
+++ b/ViruZ/HiveExt.ini
@@ -57,9 +57,9 @@ Port = 3306
 Database = viruz
 
 ;Username to connect with
-Username = root
+Username = ViruZ
 ;Password to authenticate with (default is blank)
-Password = Kde938fd52d.a193wa5
+Password = ViruZ232323
 
 ;If using OFFICIAL hive, the settings in this section have no effect, appropriate layout will be used
 [Characters]
