--- a/ViruZ/serverchernarus.cfg
+++ b/ViruZ/serverchernarus.cfg
@@ -1,6 +1,6 @@
 ﻿// GLOBAL SETTINGS
-hostName = "Official ViruZ Mod #UBS |DEV SERVER|";
-password = "232323";
+hostName = "Official ViruZ Mod #UBS |BETA 1.1.0";
+password = "";
 passwordAdmin = "27091995";
 serverCommandPassword = "27091995";	
 //reportingIP = "127.0.0.1";										// Password to become server admin. When you're in Arma MP and connected to the server, type '#login xyz'
@@ -18,7 +18,7 @@ motdInterval = 30;							// Time interval (in seconds) between each message
 
 
 // JOINING RULES
-maxPlayers = 70;							// Maximum amount of players. Civilians and watchers, beholder, bystanders and so on also count as player.
+maxPlayers = 60;							// Maximum amount of players. Civilians and watchers, beholder, bystanders and so on also count as player.
 kickDuplicate = 1;							// Each ArmA version has its own ID. If kickDuplicate is set to 1, a player will be kicked when he joins a server where another
 equalModRequired = 0;						// Outdated. If set to 1, player has to use exactly the same -mod= startup parameter as the server.
 verifySignatures = 0;						// Verifies .pbos against .bisign files. Valid values 0 (disabled), 1 (prefer v2 sigs but accept v1 too) and 2 (only v2 sigs are allowed).
