--- a/ViruZ/basic.cfg
+++ b/ViruZ/basic.cfg
@@ -1,19 +1,15 @@
-// Basic config file generated 17-Jun-16 12:52 PM with TADST.
-
-MaxMsgSend = 128;
-MaxSizeGuaranteed = 512;
-MaxSizeNonguaranteed = 256;
-MinBandwidth = 131072;
-MaxBandwidth = 2097152000;
-MinErrorToSend = 0.001;
-MinErrorToSendNear = 0.01;
-MaxCustomFileSize = 1310720;
-class sockets{maxPacketSize = 1400;};
+language="English";
 adapter=-1;
-3D_Performance=1;
+3D_Performance=-4194304;
+Resolution_Bpp=32;
 Resolution_W=0;
 Resolution_H=0;
-Resolution_Bpp=32;
-terrainGrid=25;
-viewDistance=2000;
 Windowed=0;
+MaxMsgSend=192;
+MaxSizeGuaranteed=384;
+MaxSizeNonguaranteed=64;
+MinBandwidth=128000;
+MaxBandwidth=1000000;
+MinErrorToSend=0.0020000001;
+MinErrorToSendNear=0.02;
+MaxCustomFileSize=0;
