--- a/ViruZ/basic-do viruz.cfg
+++ b/ViruZ/basic-do viruz.cfg
@@ -13,3 +13,26 @@ MaxBandwidth=1000000;
 MinErrorToSend=0.0020000001;
 MinErrorToSendNear=0.02;
 MaxCustomFileSize=0;
+
+
+
+//tava no server
+// Basic config file generated 17-Jun-16 12:52 PM with TADST.
+
+MaxMsgSend = 128;
+MaxSizeGuaranteed = 512;
+MaxSizeNonguaranteed = 256;
+MinBandwidth = 131072;
+MaxBandwidth = 2097152000;
+MinErrorToSend = 0.001;
+MinErrorToSendNear = 0.01;
+MaxCustomFileSize = 1310720;
+class sockets{maxPacketSize = 1400;};
+adapter=-1;
+3D_Performance=1;
+Resolution_W=0;
+Resolution_H=0;
+Resolution_Bpp=32;
+terrainGrid=25;
+viewDistance=2000;
+Windowed=0;
