MODIFICAÇÕES SERVER OFICIAL

--- a/ViruZ/serverchernarus.cfg
+++ b/ViruZ/serverchernarus.cfg
@@ -10,11 +10,11 @@
 // steamQueryPort  = 27016;    // default 27016, needs to be unique if multiple servers on same box
 
 // GENERAL SETTINGS
-hostname       = "ViruZ DEV SERVER";    // Name of the server displayed in the public server list
-password     = "232323";      			// Password required to join the server (remove // at start of line to enable)
+hostname       = "Viruz Mod #UBS |BETA 1.1.2";    // Name of the server displayed in the public server list
+password     = "";      			// Password required to join the server (remove // at start of line to enable)
 passwordAdmin  = "27091995";      		// Password to login as admin. Open the chat and type: #login password
 serverCommandPassword = "27091995";
-maxPlayers     = 60;    				// Maximum amount of players, including headless clients. Anybody who joins the server is considered a player, regardless of their role or team.
+maxPlayers     = 40;    				// Maximum amount of players, including headless clients. Anybody who joins the server is considered a player, regardless of their role or team.
 persistent     = 1;     				// If set to 1, missions will continue to run after all players have disconnected; required if you want to use the -autoInit startup parameter
 
 // VOICE CHAT
@@ -57,11 +57,11 @@ class Missions
 
 // LOGGING
 timeStampFormat  = "short";                 // Timestamp format used in the server RPT logs. Possible values are "none" (default), "short", "full"
-logFile          = "server_viruz.log";    	// Server console output filename
+logFile          = "";    	// Server console output filename
 
 // SECURITY
 BattlEye             = 1;    				// If set to 1, BattlEye Anti-Cheat will be enabled on the server (default: 1, recommended: 1)
-verifySignatures     = 0;    				// If set to 2, players with unknown or unsigned mods won't be allowed join (default: 0, recommended: 2)
+verifySignatures     = 2;    				// If set to 2, players with unknown or unsigned mods won't be allowed join (default: 0, recommended: 2)
 kickDuplicate        = 1;    				// If set to 1, players with an ID that is identical to another player will be kicked (recommended: 1)
 allowedFilePatching  = 1;    				// Prevents clients with filePatching enabled from joining the server (0 = block filePatching, 1 = allow headless clients, 2 = allow all) (default: 0, recommended: 1)
 
