Fix server spawn vehicles/build e publicação na database. Removidos arma colotes e loot do dms executada query no UBs removendo todos os items

--- a/ViruZ/serverchernarus.cfg
+++ b/ViruZ/serverchernarus.cfg
@@ -57,7 +57,7 @@ class Missions
 
 // LOGGING
 timeStampFormat  = "short";                 // Timestamp format used in the server RPT logs. Possible values are "none" (default), "short", "full"
-logFile          = "";    	// Server console output filename
+//logFile          = "";    	// Server console output filename
 
 // SECURITY
 BattlEye             = 1;    				// If set to 1, BattlEye Anti-Cheat will be enabled on the server (default: 1, recommended: 1)
