Não loga mais com server carregando. Atualizado antidupe Addcionado checagem da vest e do colete (mensagem global para todos verem); Builds removidas devlvem material se removida em até 5 minutos. Antiglitch de base com player e vehiculo. Variaveis para setar o debugmode na description! Removido EH server de salvar vheiculo toda vez que entra no carro  (ja salva por distancia ou quando sai.)

--- a/ViruZ/serverchernarus.cfg
+++ b/ViruZ/serverchernarus.cfg
@@ -10,7 +10,7 @@
 // steamQueryPort  = 27016;    // default 27016, needs to be unique if multiple servers on same box
 
 // GENERAL SETTINGS
-hostname       = "Official ViruZ Mod #UBS |BETA 1.1.2";    // Name of the server displayed in the public server list
+hostname       = "DEV TEST SERVER";    // Name of the server displayed in the public server list
 password     = "";      			// Password required to join the server (remove // at start of line to enable)
 passwordAdmin  = "27091995";      		// Password to login as admin. Open the chat and type: #login password
 serverCommandPassword = "27091995";
@@ -61,7 +61,7 @@ timeStampFormat  = "short";                 // Timestamp format used in the serv
 
 // SECURITY
 BattlEye             = 1;    				// If set to 1, BattlEye Anti-Cheat will be enabled on the server (default: 1, recommended: 1)
-verifySignatures     = 2;    				// If set to 2, players with unknown or unsigned mods won't be allowed join (default: 0, recommended: 2)
+verifySignatures     = 0;    				// If set to 2, players with unknown or unsigned mods won't be allowed join (default: 0, recommended: 2)
 kickDuplicate        = 1;    				// If set to 1, players with an ID that is identical to another player will be kicked (recommended: 1)
 allowedFilePatching  = 1;    				// Prevents clients with filePatching enabled from joining the server (0 = block filePatching, 1 = allow headless clients, 2 = allow all) (default: 0, recommended: 1)
 
