- Adicionado modificações no  server monitor - Funções da server monitor movidas para compiles - Sistema de Manutenção agora mostra data que ultima manutenção foi executada - Sistema de Manutenção atualiza o dono dos objetos baseado no dono do gerador - Sistema de Manutenção Adicionado checagem se update foi feito na database corretamente - Removido LIMIT nas queryes de update - Fixado client spam log error quando server ainda estava no load, variavel faltando na fsm. - adicionado toLower nas switch de woldName para evitar erros ao pegar o mapa que esta em execução - adiconadas todas as configs para tanoa incluindo a cfgWorlds como Taunus ViruZ - Adicionada nova funcão viruz_featchcfgDetails, - > Retorna todos os parametros da Classe para uso nso scripts - Reescrita spawn_loot.sqf com função universal que detecta que tipo de Item e seus atributos, somente pela classe, (Agora pode adicionar qualquer tipo de item na mesma classes da CfgLoot.hpp, e o nome da classe não importa mais, a não ser quando adiconada na CFGBuildingLoot.hpp) - Adicionado vzserver_autorestart.sqf que faltou no update do autorestart. - Readicionado include na config.cfg da viruz_zombie usada para função stream_locationCheck.sqf, que spawna objetos, corpos, e alterações visuais no mapa.(so esta com as classes do cehrnarus temporariamente)

--- a/ViruZ/serverchernarus.cfg
+++ b/ViruZ/serverchernarus.cfg
@@ -11,7 +11,7 @@
 
 // GENERAL SETTINGS
 hostname       = "DEV TEST SERVER";    // Name of the server displayed in the public server list
-password     = "";      			// Password required to join the server (remove // at start of line to enable)
+password     = "232323";      			// Password required to join the server (remove // at start of line to enable)
 passwordAdmin  = "27091995";      		// Password to login as admin. Open the chat and type: #login password
 serverCommandPassword = "27091995";
 maxPlayers     = 40;    				// Maximum amount of players, including headless clients. Anybody who joins the server is considered a player, regardless of their role or team.
