- Adcionado save de ataches de armas dentro de holders/carros/mochilas - Fixado antiglitch quando kika player do clan ou adiciona ele ativa e desativa na hora. - Finalizado sistema de Clan e grupo permanente.

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@
 /config/config.vdf
 /@ViruZ/meta.cpp
 /ViruZ/BattlEye/BEServer.dll
+/mpmissions/ViruZ.Chernarus/vzgm/ui/tempgroup_ca.paa
+/mpmissions/ViruZ.Chernarus/vzgm/ui/ingroup_ca.paa
+/mpmissions/ViruZ.Chernarus/vzgm/ui/offline_ca.paa
+/mpmissions/ViruZ.Chernarus/vzgm/ui/online_ca.paa
