Cleaned the missing files!

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@
 /mpmissions/ViruZ.Chernarus/vzgm/ui/ingroup_ca.paa
 /mpmissions/ViruZ.Chernarus/vzgm/ui/offline_ca.paa
 /mpmissions/ViruZ.Chernarus/vzgm/ui/online_ca.paa
+/@ViruZ/Addons/viruz_weapons/Melee/anim/melee_punch.rtm
