--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@
 /mpmissions/ViruZ.Chernarus/vzgm/ui/offline_ca.paa
 /mpmissions/ViruZ.Chernarus/vzgm/ui/online_ca.paa
 /@ViruZ/Addons/viruz_weapons/Melee/anim/melee_punch.rtm
+/ViruZ/servertaunus.cfg
